[tool.poetry]
name = "azmlsdkv2-test"
version = "0.1.0"
description = ""
authors = ["Taiki Sugawara <buzz.taiki@gmail.com>"]
readme = "README.md"
packages = [{include = "azmlsdkv2_test"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-ai-ml = "^1.3.0"
azure-identity = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120