[tool.poetry]
name = "azure-mlflow"
version = "0.1.0"
description = ""
authors = ["Taiki Sugawara <buzz.taiki@gmail.com>"]
readme = "README.md"
packages = [{include = "azure_mlflow"}]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.12.1"
azureml-mlflow = "^1.49.0"
numba = "^0.56.0"
azure-ai-ml = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120