[tool.poetry]
name = "azure-mlflow-local"
version = "0.1.0"
description = ""
authors = ["Taiki Sugawara <buzz.taiki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.2.2"
azureml-mlflow = "^1.49.0"
numba = "^0.56.0"
azure-ai-ml = "^1.4.0"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
