[project]
name = "azure-ml-subscription-jobs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taiki Sugawara", email = "buzz.taiki@gmail.com" }
]
dependencies = [
    "azure-ai-ml~=1.13.0",
    "azure-identity~=1.15.0",
    "azure-mgmt-subscription~=3.1.1",
    "azure-mgmt-resourcegraph~=8.0.0",
    "azure-mgmt-resource>=23.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
# These three options are equivalent:
app = "python app.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["*.py"]
