[package]
name = "relly"
version = "0.1.0"
authors = ["Taiki Sugawara <buzz.taiki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
serde = { version = "1.0.126", features = ["derive"] }
zerocopy = "0.5.0"
bincode = "1.3.3"
anyhow = "1.0.42"

[dev-dependencies]
tempfile = "3.2.0"
md-5 = "0.9.1"
sha-1 = "0.9.7"