[package]
name = "thread-channel-cost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
tokio = { version = "1.11.0", features = ["full"] }

[dev-dependencies]
bencher = "0.1.5"


[[bench]]
name = "benchmark"
harness = false
